--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "Gethyl George Kurian",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --content-base --inline --hot",
+    "start": "webpack-dev-server --content-base --inline --hot --host $IP --port $PORT --public $C9_HOSTNAME",
+    "start2": "webpack-dev-server --content-base --inline --hot",
     "server": "babel-node  server.js",
     "server2": "nodemon server.js",
-    "server+client": "babel-node server.js | yarn start"
+    "server+client": "babel-node server.js | yarn start2"
   },
   "dependencies": {
     "axios": "^0.15.3",
