--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "server+client": "babel-node server.js | yarn start"
   },
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "^0.17.1",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
@@ -28,29 +28,23 @@
     "html-webpack-plugin": "^2.30.1",
     "http": "^0.0.0",
     "immutable": "^3.8.1",
-    "material-ui": "^0.17.0",
+    "material-ui": "^1.0.0-beta.29",
+    "material-ui-icons": "^1.0.0-beta.17",
     "moment": "^2.20.1",
     "mongoose": "^4.8.1",
     "mongoose-auto-increment": "^5.0.1",
     "nodemon": "^1.11.0",
-    "react": "^15.5.3",
-    "react-dom": "^15.5.3",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.1",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-tap-event-plugin": "^2.0.1",
+    "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "socket.io": "^1.7.2",
-    "web-webpack-plugin": "^1.10.0",
-    "webpack": "^3.5.5",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-bundle-size-analyzer": "^2.7.0",
-    "webpack-dev-server": "^2.10.1",
-    "webpack-encoding-plugin": "^0.2.1",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-pwa-manifest": "^3.4.1"
+    "socket.io": "^1.7.2"
   },
   "devDependencies": {
     "html-webpack-plugin": "^2.30.1",
@@ -60,6 +54,14 @@
     "redux-devtools-filterable-log-monitor": "^0.8.0",
     "redux-devtools-inspector": "^0.11.3",
     "redux-devtools-log-monitor": "^1.4.0",
-    "redux-slider-monitor": "^2.0.0-1"
+    "redux-slider-monitor": "^2.0.0-1",
+    "web-webpack-plugin": "^1.10.0",
+    "webpack": "^3.5.5",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-bundle-size-analyzer": "^2.7.0",
+    "webpack-dev-server": "^2.11.0",
+    "webpack-encoding-plugin": "^0.2.1",
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-pwa-manifest": "^3.4.1"
   }
 }
