--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --content-base --inline --hot --host $IP --port 8081 --public $C9_HOSTNAME",
-    "start2": "webpack-dev-server --content-base --inline --hot --port 3000",
-    "start3": "webpack-dev-server --content-base --inline --hot --port 3005",
+    "start2": "webpack-dev-server --content-base --inline --hot --port 3000 --host 10.192.8.95",
+    "start3": "webpack-dev-server --content-base --inline --hot --port 3005 --host 10.192.8.95",
     "build": "webpack",
     "server": "babel-node  server.js",
     "server2": "nodemon server.js",
